@@ -7,7 +7,7 @@
 #include "csvregex.h"
 #include "WeatherDataLine.h"
 #include "WeatherDataVec.h"
-#include "RootClass.C"
+//#include "RootClass.C"
 
 #include <TF1.h>
 #include <TH1.h>
