@@ -11,4 +11,4 @@ void projectQL(Int_t month, std::string city, std::string filename) {
 //eg
 //projectQL(6,"Lund","smhi-opendata_1_53430_20210926_101122_Lund.csv")
 //projectQL(8,"Falun","smhi-opendata_1_105370_20210926_100841_Falun.csv")
-
+//projectQL(12,"Boras","smhi-opendata_1_72450_20210926_100728_Boras.csv")
