@@ -17,7 +17,7 @@ void rootlogon() {
 	gROOT->ProcessLine(".L csvregex.cpp+");
 	gROOT->ProcessLine(".L WeatherDataVec.cpp+");
 	gROOT->ProcessLine(".L Gregorian.cpp+");
-	gROOT->ProcessLine(".L ../include/RootClass.C+");
+	//gROOT->ProcessLine(".L ../include/RootClass.C+");
  	gROOT->ProcessLine(".L monthly.C"); 
 	gROOT->ProcessLine(".L corona.C"); 
 	gROOT->ProcessLine(".L project.cpp"); 
